--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-  id 'org.springframework.boot' version '3.1.2'
-  id 'io.spring.dependency-management' version '1.1.2'
+  id 'org.springframework.boot' version '3.3.5'
+  id 'io.spring.dependency-management' version '1.1.6'
   id 'org.asciidoctor.jvm.convert' version "3.3.2"
   id 'java'
 }
@@ -9,8 +9,9 @@ group = 'io.devfactory'
 version = '0.0.1-SNAPSHOT'
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_19
-  targetCompatibility = JavaVersion.VERSION_19
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(21)
+  }
 }
 
 configurations {
@@ -49,6 +50,7 @@ dependencies {
   testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
